feat(账号服务): 新增JWT相关Service

--- a/services-user-auth/src/main/resources/application.yml
+++ b/services-user-auth/src/main/resources/application.yml
@@ -20,7 +20,6 @@ eureka:
 logging:
   level:
     com.wantocode.userauth.mapper: debug
-    
-client:
-  id: testId
-  secret: testSecret
+jwt:
+  secret: asdf12303116
+  expiration: 1800
