--- a/services-user-auth/src/main/resources/application.yml
+++ b/services-user-auth/src/main/resources/application.yml
@@ -19,7 +19,7 @@ eureka:
     prefer-ip-address: true
 logging:
   level:
-    com.wantocode.userauth.mapper: debug
+    com.chen.userauth: debug
 jwt:
   secret: asdf12303116
   expiration: 1800
